# mata-rs

./: Cargo.toml  README.md
src/: lib.rs
src/allocator/: main.rs  mod.rs
src/components/: macro.rs  mod.rs
src/fiber/: error_registry.rs  mod.rs
src/fiber/begin_work/: mod.rs  safely_render.rs  update_basic.rs
src/hooks/: mod.rs
src/utils/: mod.rs  tags.rs
