[package]
name = "mata-rs"
version = "0.1.0"
authors = ["Alexis Munsayac <alexis.munsayac@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.58"
js-sys="0.3.35"

[dependencies.web-sys]
version = "0.3.35"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]